# chaos_ops

./: .gitignore  BLOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/baseline/: baseline.json
artifacts/transcripts/: easy_dns_outage_oracle.txt  hard_autoscaler_oracle.txt  hard_autoscaler_random.txt  hard_cascade_oracle.txt  hard_misrouted_oracle.txt  hard_rogue_deploy_bot_heuristic.txt  hard_rogue_deploy_bot_oracle.txt  medium_disk_full_oracle.txt
chaosops/: README.md  __init__.py  pyproject.toml  requirements.txt
chaosops/agents/: llm_adapter.py  policies.py  runner.py  trained_policy.py
chaosops/agents/prompts/: dev.md  manager.md  oversight.md  sre.md
chaosops/curriculum/: generator.py
chaosops/dashboard/: terminal.py  transcript.py
chaosops/env/: __init__.py  action_handlers.py  environment.py  injectors.py  metrics.py  models.py  openenv_wrapper.py  projections.py  world_sim.py
chaosops/rewards/: reward_fn.py
chaosops/train/: baseline.py  evaluate.py  grpo_train.py
docs/: demo_verification.md  pitch_script.md
hf_space/: README.md  app.py  requirements.txt
notebooks/: colab_train.ipynb
tests/: test_curriculum.py  test_integration_env.py  test_llm_adapter.py  test_llm_adapter_advanced.py  test_metrics.py  test_private_channels.py  test_reward_fn.py  test_runner.py  test_world_sim.py
